--- a/ProduManApp/ProduManAPI/appsettings.json
+++ b/ProduManApp/ProduManAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ProduManDatabaseConnection" : "Server=WDZIENKOWSKI\\SQLEXPRESS;DataBase= ProduMan ; integrated security= true ; Encrypt=False" 
+    
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
